# atsamd

boards/d20controller/: .gdbinit  .gdbint  Cargo.toml  blink.hex  cube.uf2  makefile  openocd.cfg  test.hex  test_d20.hex
boards/d20controller/examples/: blinky_basic.rs  cube-controller.rs  spi_test.rs
boards/d20controller/examples/gfx/: color.rs  gfx_affinematrix.rs  gfx_basic_pattern.rs  gfx_helper.rs  gfx_rainbow.rs  gfx_sine_rainbow.rs  gfx_sine_rainbow_001.rs  gfx_sine_rainbow_imu.rs  gfx_sine_rainbow_imu_001.rs  gfx_sine_rainbow_imu_002.rs  gfx_sinefield.rs  gfx_twinkle.rs  hsv.rs  mod.rs  rand.rs
boards/d20controller/src/: lib.rs  pins.rs
hal/src/samd51/: clock.rs  dma.rs  mod.rs
hal/src/samd51/dma/: channel.rs  controller.rs  descriptor.rs  error.rs
hal/src/samd51/dma/controller/: samd51.rs
hal/src/samd51/sercom/: spi.rs
pac/atsamd51g19a/src/dmac/: chctrla.rs
