[package]
name = "d20controller"
version = "0.1.0"
authors = [
    "Greg Davill <greg.davill@gmail.com>",
]
description = "Board Support crate for the d20controller"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT"
edition = "2018"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
documentation = "https://atsamd-rs.github.io/atsamd/atsamd51g19a/d20controller/"

[dependencies]
cortex-m = "~0.6"
embedded-hal = "~0.2"
bitbang-hal = "~0.3"
nb = "~0.1"
micromath = "0.4.1"

[dependencies.cortex-m-rt]
version = "~0.6"
optional = true

[dependencies.atsamd-hal]
path = "../../hal"
version = "~0.7"
default-features = false

[dependencies.usb-device]
version = "~0.2"
optional = true

[dependencies.usbd-serial]
version = "~0.1"
optional = true

[dependencies.nalgebra]
version = "0.18"
default-features = false

[dev-dependencies]
panic-halt = "~0.2"
panic-semihosting = "~0.5"
cortex-m-semihosting = "~0.3"
cortex-m-rtfm = "~0.4"
panic_rtt = "~0.2"

[features]
# ask the HAL to enable atsamd51g19a support
default = ["rt", "atsamd-hal/samd51g19a", "atsamd-hal/samd51", "atsamd-hal/unproven"]
rt = ["cortex-m-rt", "atsamd-hal/samd51g19a-rt"]
unproven = ["atsamd-hal/unproven"]
usb = ["atsamd-hal/usb", "usb-device", "usbd-serial"]
use_uart_debug = ["atsamd-hal/use_uart_debug"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = false
opt-level = "s"


[[example]]
name = "blinky_basic"


[[example]]
name = "usb_serial"
required-features = ["usb", "use_uart_debug"]
